--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@antfu/eslint-config": "^3.9.2",
+    "@shikijs/monaco": "^1.24.0",
     "@vue-vine/eslint-config": "^0.2.5",
     "@vueuse/core": "^11.3.0",
     "@webcontainer/api": "^1.5.1",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "eslint": "^9.15.0",
+    "monaco-editor-core": "^0.52.0",
+    "shiki": "^1.24.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
