--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@antfu/eslint-config": "^3.11.2",
     "@iconify/json": "^2.2.281",
     "@shikijs/monaco": "^1.24.2",
-    "@vue-vine/eslint-config": "^0.2.8",
+    "@vue-vine/eslint-config": "latest",
     "@vueuse/core": "^11.3.0",
     "@webcontainer/api": "^1.5.1",
     "@xterm/addon-fit": "^0.10.0",
@@ -30,6 +30,6 @@
     "unocss": "^0.64.1",
     "unplugin-auto-import": "^0.18.6",
     "vite": "^5.4.11",
-    "vue-vine": "^0.1.40"
+    "vue-vine": "latest"
   }
 }
