--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@antfu/eslint-config": "^3.11.2",
-    "@iconify/json": "^2.2.281",
-    "@shikijs/monaco": "^1.24.2",
-    "@vue-vine/eslint-config": "latest",
+    "@antfu/eslint-config": "^3.12.0",
+    "@iconify/json": "^2.2.288",
+    "@shikijs/monaco": "^1.24.4",
     "@vueuse/core": "^11.3.0",
     "@webcontainer/api": "^1.5.1",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
-    "eslint": "^9.16.0",
+    "eslint": "^9.17.0",
     "monaco-editor-core": "^0.52.2",
-    "shiki": "^1.24.2",
+    "shiki": "^1.24.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.10",
     "@unocss/reset": "^0.64.1",
+    "@vue-vine/eslint-config": "latest",
     "typescript": "^5.7.2",
     "unocss": "^0.64.1",
     "unplugin-auto-import": "^0.18.6",
-    "vite": "^5.4.11",
+    "vite": "^6.0.5",
+    "vite-plugin-inspect": "^0.10.6",
     "vue-vine": "latest"
   }
 }
